--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "google-spreadsheet": "^3.0.11",
     "jest": "^26.1.0"
   },
