--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "google-spreadsheet": "^3.0.11",
-    "jest": "^26.1.0"
+    "jest": "^26.1.0",
+    "mongoose": "^5.9.27"
   },
   "scripts": {
     "test": "jest test"
