--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dotenv": "^8.2.0",
     "google-spreadsheet": "^3.0.11",
     "jest": "^26.1.0",
-    "mongoose": "^5.9.27"
+    "mongoose": "^5.9.27",
+    "node-cron": "^2.0.3"
   },
   "scripts": {
     "test": "jest test"
